# nix-synthesizer

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml
.github/workflows/: gen-spec.yml
src/: builders.rs  emitter.rs  iac_bridge.rs  lib.rs  node.rs  synthesizer_core_impl.rs  types.rs
src/typescape/: blackmatter.rs  cluster.rs  flake.rs  invariants.rs  mod.rs  node.rs  platform.rs  profile.rs  registry.rs  secret.rs  substrate_builder.rs  vpn.rs
tests/: bridge_parity.rs  compiler_guarantees.rs  exhaustive_ast_proofs.rs  no_raw_invariant.rs  properties.rs  structural.rs  synthesizer_core_conformance.rs  type_algebra.rs  typescape_invariant_detection.rs  typescape_proptest.rs  typescape_self_validation.rs  typescape_summary.rs
